fixed issue with <a> overflowing mobile buttons

--- a/style.css
+++ b/style.css
@@ -134,8 +134,10 @@ body>div.wrapper>nav>ul>div:active {
 
 body>div.wrapper>nav>ul>div>a {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     z-index: 3;
 }
 
